--- a/storage/templates/base.html
+++ b/storage/templates/base.html
@@ -78,7 +78,7 @@
     <div class="left-bar">
         <ul class="list-group">
         {% for i in tools %}
-        <li class="list-group-item"><a href="http://127.0.0.1:8000/{{ i.path }}">{{i.title}}</a></li>
+        <li class="list-group-item"><a href="{% url i.path %}">{{i.title}}</a></li>
         {% endfor %}
         </ul>
     </div>
