--- a/storage/contracts/templates/contracts_minimal.html
+++ b/storage/contracts/templates/contracts_minimal.html
@@ -3,7 +3,83 @@
 {% block content %}
 {% include 'filter_form_drop.html' %}
 <!--  -->
-    <div class="container-info">Кол-во контрактов соответствующих фильтру {{ contracts|length }}</div>
+<div class="card container-info"> 
+  <table class="table table-striped table-hover">
+    <tr>
+      <td colspan="2">Кол-во контрактов соответствующих фильтру</td>
+      <td>{{ contracts|length }}</td>
+    </tr>
+    </table>
+    </div>
+    <div class="card container-info"> 
+      <table class="table table-striped table-hover">
+        <thead>
+        </thead>
+        <tbody>
+          
+          <tr>
+            <td><b>Завоз</b></td>
+            <td>Суммарный вес</td>
+            <td>{{ income_stats.weight }}</td>
+          </tr>
+          <tr>
+            <td></td>
+            <td>Суммарная стоимость</td>
+            <td>{{ income_stats.cost }}</td>
+          </tr>
+          <tr>
+            <td></td>
+            <td>Из них оплачено</td>
+            <td>{{ income_stats.payments }}</td>
+          </tr>
+          {% for manager, amount in income_stats.bonuses.items %}
+          <tr>
+            <td><b>Премиальные</b></td>
+            <td>Доля {{ manager }}</td>
+            <td>{{ amount }}</td>
+          </tr>
+          {% endfor %}
+        </tbody>
+        </table>
+        </div>
+        <div class="card container-info"> 
+        <table class="table table-striped table-hover">
+        <tbody>
+        <tr>
+          <td><b>Отгрузки</b></td>
+          <td>Суммарный вес</td>
+          <td>{{ outcome_stats.weight }}</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Себестоимость</td>
+          <td>{{ outcome_stats.expenses }}</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Суммарная стоимость</td>
+          <td>{{ outcome_stats.cost }}</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Из них оплачено</td>
+          <td>{{ outcome_stats.payments }}</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>Планируемый доход</td>
+          <td>{{ outcome_stats.expected }}</td>
+        </tr>
+        {% for manager, amount in outcome_stats.bonuses.items %}
+        <tr>
+          <td><b>Премиальные</b></td>
+          <td>Доля {{ manager }}</td>
+          <td>{{ amount }}</td>
+        </tr>
+        {% endfor %}
+        </tbody>
+      </table>
+    </div>
     
     <div class="container-content">
       <!--  -->
@@ -33,7 +109,11 @@
               {% else %}
               {% endif %}
                {{ contract.contractor.name }} 
-              {{ contract.reserved|yesno:"1,0" }}|{{ contract.executed|yesno:"1,0" }}|{{ contract.paid|yesno:"1,0" }}</a>
+              {{ contract.reserved|yesno:"1,0" }}|{{ contract.executed|yesno:"1,0" }}|{{ contract.paid|yesno:"1,0" }}
+              {{ contract.total_weight|default:0 }}-
+              {{ contract.total_sum|default:0 }}/
+              {{ contract.total_payments|default:0 }}
+            </a>
             </div>
           </div>
 
