--- a/storage/storage_items/templates/storage_items/storage_items.html
+++ b/storage/storage_items/templates/storage_items/storage_items.html
@@ -3,10 +3,41 @@
 
 {% block content %}
 <p>{% include 'pagination.html' %}</p>
-{% for s_i in storage_items %}
-    <ul>
-        <li>{{ s_i }}</li>
-    </ul>
-{% endfor %}
+
+<div class="card container-info"> 
+    <table class="table table-striped table-hover">
+        <thead>
+                <tr>
+                    <th scope="col">Объект</th>
+                    <th scope="col">Цена закупки</th>
+                    <th scope="col">К продаже</th>
+                    <th scope="col">На складе</th>
+                  </tr>
+        </thead>
+    <tbody>
+        {% for s_i in storage_items %}
+        <tr
+        {% if s_i.available < 0 or s_i.stored < 0 %}
+        class="table-danger"
+        {% endif %}
+        >
+            <td>{{ s_i.product }}</td>
+            <td>{{ s_i.price }}</td>
+            <td
+            {% if s_i.available < 0 %}
+            class="text-danger"
+            {% endif %}
+            >{{ s_i.available }}шт / {{ s_i.weight_available }}кг</td>
+            <td 
+            {% if s_i.stored < 0 %}
+            class="text-danger"
+            {% endif %}
+            >{{ s_i.stored }}шт / {{ s_i.weight_stored }}кг</td>
+          </tr>
+        {% endfor %}
+    </tbody>
+  </table>
+</div>
+
 <p>{% include 'pagination.html' %}</p>
 {% endblock %}
