--- a/storage/contracts/templates/filter_form_drop.html
+++ b/storage/contracts/templates/filter_form_drop.html
@@ -1,5 +1,5 @@
 <div class="dropdown">
-    <button type="button" class="btn btn-outline-secondary dropdown-toggle w-auto" data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">
+    <button type="button" class="btn btn-outline-secondary dropdown-toggle w-auto d-block" data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">
       Фильтр
     </button>
   
