--- a/storage/templates/base.html
+++ b/storage/templates/base.html
@@ -16,9 +16,11 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Посейдон</a>
+
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
+
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 
@@ -54,8 +56,8 @@
         
       </nav>
   
-      
-    <!-- <div class="clear"></div> -->
+      <div class="clear"></div>    
+    
 <!--  -->
 <div class="main-container">
 
