--- a/storage/contracts/templates/contracts_minimal.html
+++ b/storage/contracts/templates/contracts_minimal.html
@@ -3,6 +3,7 @@
 
 {% block content %}
 <div class="card"> 
+  
 {% include 'filter_form_drop.html' %}
 </div>
 
@@ -14,6 +15,16 @@
     </tr>
   </table>
 </div>
+
+
+<div class="card"> 
+<p>
+  <a class="btn btn-outline-secondary d-grid gap-2" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+    Рассчеты
+  </a>
+</p>
+<div class="collapse" id="collapseExample">
+  <div class="card">
 
 <div class="card"> 
   <table class="table table-striped table-hover">
@@ -96,7 +107,9 @@
     </tbody>
   </table>
 </div>
-
+</div>
+</div>
+</div>
     <div class="container-content">
 
       <div class="pagination-upper">
@@ -117,18 +130,19 @@
           {% else %}
           card bg-secondary-subtle mb-1
           {% endif %}">
-            <div class="card-text"><a href="{% url 'contracts:contract' contract.pk %}">
-            #{{ contract.pk }}--
-              {{ contract.date_plan|date:"d M Y" }}--
+            <div class="card-text"><a class="btn stretched-link p-0" href="{% url 'contracts:contract' contract.pk %}">
+            #{{ contract.pk }} --
+              {{ contract.date_plan|date:"d M Y" }} --
               {% if contract.contract_type == 'Покупка' %}
               <b class="text-danger">Завоз</b>
               {% else %}
               {% endif %}
-               {{ contract.contractor.name }} 
-              {{ contract.reserved|yesno:"1,0" }}|{{ contract.executed|yesno:"1,0" }}|{{ contract.paid|yesno:"1,0" }}
-              {{ contract.total_weight|default:0|floatformat:2|intcomma }}-
-              {{ contract.total_sum|default:0|floatformat:2|intcomma }}/
-              {{ contract.total_payments|default:0|floatformat:2|intcomma }}
+               {{ contract.contractor.name }} --
+              <!-- {{ contract.reserved|yesno:"1,0" }}|{{ contract.executed|yesno:"1,0" }}|{{ contract.paid|yesno:"1,0" }} -->
+              {{ contract.total_weight|default:0|floatformat:2|intcomma }}кг. 
+              Оплата {{ contract.total_payments|default:0|floatformat:2|intcomma }} из
+              {{ contract.total_sum|default:0|floatformat:2|intcomma }}
+              
             </a>
             </div>
           </div>
