--- a/storage/products/templates/products/add_product.html
+++ b/storage/products/templates/products/add_product.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 
@@ -6,12 +7,9 @@
         {% csrf_token %}
         <div class="form-error">{{ form.non_field_errors }}</div>
 
-        {% for field in form %}
-        <p><label class="form-label" for="{{ field.id_for_label }}">{{ field.label }}</label>{{ field }}</p>
-        <div class="form-error">{{ field.errors }}</div>
-        {% endfor %}
+        {% crispy form %}
 
-        <p><button type="submit">Создать</button></p>
+<!--        <p><button type="submit" class="btn btn-sm btn-outline-secondary">Создать</button></p>-->
         
     </form>
 
