--- a/storage/contracts/templates/contracts_minimal.html
+++ b/storage/contracts/templates/contracts_minimal.html
@@ -5,19 +5,19 @@
 <div class="card"> 
   
 {% include 'filter_form_drop.html' %}
-</div>
 
-<div class="card container-info"> 
-  <table class="table table-striped table-hover">
+
+<!-- <div class="card container-info">  -->
+  <table class="table table-striped table-hover mt-1 mr-1 p-1">
     <tr>
       <td colspan="2">Кол-во контрактов соответствующих фильтру</td>
       <td>{{ contracts|length }}</td>
     </tr>
   </table>
-</div>
+<!-- </div> -->
 
 
-<div class="card"> 
+<!-- <div class="card">  -->
 <p>
   <a class="btn btn-outline-secondary d-grid gap-2" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
     Рассчеты
@@ -26,7 +26,7 @@
 <div class="collapse" id="collapseExample">
   <div class="card">
 
-<div class="card"> 
+<!-- <div class="card">  -->
   <table class="table table-striped table-hover">
     <thead>
           <tr>
@@ -108,7 +108,8 @@
   </table>
 </div>
 </div>
-</div>
+<!-- </div> -->
+<!-- </div> -->
 </div>
     <div class="container-content">
 
@@ -138,7 +139,7 @@
               {% else %}
               {% endif %}
                {{ contract.contractor.name }} --
-              <!-- {{ contract.reserved|yesno:"1,0" }}|{{ contract.executed|yesno:"1,0" }}|{{ contract.paid|yesno:"1,0" }} -->
+              <!-- paid|yesno:"1,0" -->
               {{ contract.total_weight|default:0|floatformat:2|intcomma }}кг. 
               Оплата {{ contract.total_payments|default:0|floatformat:2|intcomma }} из
               {{ contract.total_sum|default:0|floatformat:2|intcomma }}
