--- a/storage/products/static/products/css/base.css
+++ b/storage/products/static/products/css/base.css
@@ -5,7 +5,7 @@
 
 .main-container {
     display: grid;
-    grid-template-columns: repeat(12fr);
+    grid-template-columns: repeat(13fr);
     grid-template-rows: repeat(4);
 }
 h1 {
@@ -15,19 +15,21 @@ h1 {
     grid-column: 1/3;
 }
 .container {
-    grid-column: 3/11;
+    grid-column: 3/12;
 }
 .right-bar {
-    grid-column: 12/14;
+    grid-column: 13/14;
+    max-width: 300px;
 }
-.left-bar p,
+
+/* .left-bar p,
 .right-bar p {
     margin: 1em;
     padding: 1em;
     padding-bottom: 1em;
     border-style: solid;
     border-width: 0.5px;
-}
+} */
 
 .pagination-upper {
     text-align: center;
