pagination, css, statistic fixed

--- a/storage/contracts/templates/contracts_minimal.html
+++ b/storage/contracts/templates/contracts_minimal.html
@@ -11,7 +11,7 @@
   <table class="table table-striped table-hover mt-1 mr-1 p-1">
     <tr>
       <td colspan="2">Кол-во контрактов соответствующих фильтру</td>
-      <td>{{ contracts|length }}</td>
+      <td>{{ query_length }}</td>
     </tr>
   </table>
 <!-- </div> -->
