--- a/storage/templates/pagination.html
+++ b/storage/templates/pagination.html
@@ -1,24 +1,26 @@
 
-<nav>
-    {% if is_paginated %}
+{% if is_paginated %}
+<nav aria-label="Page navigation example">
+  <ul class="pagination pagination-sm justify-content-center">
 
-      {% if page_obj.has_previous %}
-        <a href="{{ custom_url }}page=1">First</a>
-        <a href="{{ custom_url }}page={{ page_obj.previous_page_number }}">Previous</a>
-      {% endif %}
-
-      {% for num in page_obj.paginator.page_range %}
-        {% if page_obj.number == num %}
-          <a href="{{ custom_url }}page={{ num }}">{{ num }}</a>
-        {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
-          <a href="{{ custom_url }}page={{ num }}">{{ num }}</a>
-        {% endif %}
-      {% endfor %}
-
-      {% if page_obj.has_next %}
-        <a href="{{ custom_url }}page={{ page_obj.next_page_number }}">Next</a>
-        <a href="{{ custom_url }}page={{ page_obj.paginator.num_pages }}">Last</a>
-      {% endif %}
-
+    {% if page_obj.has_previous %}
+      <li class="page-item"><a class="page-link" href="{{ custom_url }}page=1">First</a></li>
+      <li class="page-item"><a class="page-link" href="{{ custom_url }}page={{ page_obj.previous_page_number }}">Previous</a></li>
     {% endif %}
+
+    {% for num in page_obj.paginator.page_range %}
+    {% if page_obj.number == num %}
+      <li class="page-item"><a class="page-link" href="{{ custom_url }}page={{ num }}">{{ num }}</a></li>
+    {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+      <li class="page-item"><a class="page-link" href="{{ custom_url }}page={{ num }}">{{ num }}</a></li>
+    {% endif %}
+    {% endfor %}
+
+    {% if page_obj.has_next %}
+      <li class="page-item"><a class="page-link" href="{{ custom_url }}page={{ page_obj.next_page_number }}">Next</a></li>
+      <li class="page-item"><a class="page-link" href="{{ custom_url }}page={{ page_obj.paginator.num_pages }}">Last</a></li>
+    {% endif %}
+
+  </ul>
 </nav>
+{% endif %}
