--- a/storage/contracts/templates/contract.html
+++ b/storage/contracts/templates/contract.html
@@ -130,7 +130,7 @@
             {% csrf_token %}
             <!-- <label for="spec_amount">: </label> -->
             <input id="spec_amount" type="number" name="spec_amount" value="0">
-            <button type="submit" class="btn btn-sm btn-outline-secondary">Добавить спецификации</button>
+            <button type="submit" class="btn btn-sm btn-outline-secondary">Добавить/Изменить спецификации</button>
         </form>
     </div>
     {% endif %}
