--- a/storage/products/static/products/css/base.css
+++ b/storage/products/static/products/css/base.css
@@ -1,4 +1,5 @@
-* {
+html,
+body {
     margin: 0;
     padding: 0;
 }
@@ -27,12 +28,12 @@ a.page-link:hover {
     color: #329215;
 }
 
-.pagination-upper {
+/* .pagination-upper {
     text-align: center;
 }
 .pagination-lower {
     text-align: center;
-}
+} */
 .card {
     margin: 3px;
     padding: 3px;
