--- a/storage/products/static/products/css/base.css
+++ b/storage/products/static/products/css/base.css
@@ -1,5 +1,14 @@
+@font-face {
+    font-family: "Roboto";
+    src: url("../fonts/Roboto-Regular.woff2") format("woff2");
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
 html,
 body {
+    font-family: "Roboto", sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -28,12 +37,6 @@ a.page-link:hover {
     color: #329215;
 }
 
-/* .pagination-upper {
-    text-align: center;
-}
-.pagination-lower {
-    text-align: center;
-} */
 .card {
     margin: 3px;
     padding: 3px;
