--- a/storage/templates/base.html
+++ b/storage/templates/base.html
@@ -7,6 +7,8 @@
     <link type="text/css" href="{% static 'products/css/base.css' %}" rel="stylesheet" />
 	  <link type="text/css" href="{% static 'products/css/header.css' %}" rel="stylesheet" />
     <link type="text/css" href="{% static 'products/css/bootstrap.min.css' %}" rel="stylesheet" />
+    <!-- <link href="https://cdn.jsdelivr.net/npm/daisyui@4.10.2/dist/full.min.css" rel="stylesheet" type="text/css" /> -->
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>{{ title }}</title>
 </head>
