--- a/storage/contracts/templates/contracts/contracts_plus.html
+++ b/storage/contracts/templates/contracts/contracts_plus.html
@@ -23,7 +23,7 @@
           {% else %}
           card p-1 mb-1 bg-secondary-subtle text-secondary-emphasis
           {% endif %}">
-          <div class="card-header"><a href="{% url 'contracts:contract' contract.pk %}">#{{ contract.pk }}--
+          <div class="card-header"><a class="btn stretched-link p-0" href="{% url 'contracts:contract' contract.pk %}">#{{ contract.pk }}--
             {{ contract.date_plan|date:"d M Y" }}--{{ contract.contract_type }} {{ contract.contractor.name }} 
             {{ contract.reserved|yesno:"1,0" }}|{{ contract.executed|yesno:"1,0" }}|{{ contract.paid|yesno:"1,0" }}</a>
           </div>
