--- a/storage/users/templates/users/password_change_form.html
+++ b/storage/users/templates/users/password_change_form.html
@@ -1,13 +1,9 @@
 {% extends 'base.html' %}
-
+{% load crispy_forms_tags %}
 {% block content %}
 <form method="post">
     {% csrf_token %}
     <div class="form-error">{{ form.non_field_errors }}</div>
-    {% for field in form %}
-    <p><label class="form-label" for="{{ field.id_for_label }}">{{ field.label }}:&nbsp;</label>{{ field }}</p>
-    <div class="form-error">{{ field.errors }}</div>
-    {% endfor %}
-    <p><button type="submit">Изменить пароль</button></p>
+    {% crispy form %}
 </form>
 {% endblock %}
