--- a/storage/products/templates/products/products.html
+++ b/storage/products/templates/products/products.html
@@ -7,7 +7,16 @@
 {% for product in products %}
     <div class="card">
     <div class="card-text"><a class="btn stretched-link" href="{% url 'products:product' product.pk %}">{{ product }}</a>
-    <span class="badge text-bg-success rounded-pill">{{ product.specifications.count }}</span></div></div>
+    
+    
+    {% if product.specifications.count == 0 %}
+    <span class="badge text-bg-secondary rounded-pill">
+    {% else %}
+    <span class="badge text-bg-success rounded-pill">
+    {% endif %}
+    {{ product.specifications.count }}</span></div></div>
+
+
 {% endfor %}
 
 <p>{% include 'pagination.html' %}</p>
