--- a/storage/contracts/templates/contracts/filter_form_drop.html
+++ b/storage/contracts/templates/contracts/filter_form_drop.html
@@ -1,5 +1,5 @@
 
-    <div class="dropdown d-grid gap-2">
+<div class="dropdown d-grid gap-2">
 
     <button type="button" class="btn btn-outline-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">
         Фильтр
@@ -18,7 +18,7 @@
                 {{ f }} {{f.errors}}
             </div>
         {% endfor %}
-        <button type="submit" class="btn btn-primary w-auto">Фильтр</button>
+        <button type="submit" class="btn btn-success w-auto">Фильтр</button>
     </form>
 
   </div>
