content full width

--- a/storage/products/static/products/css/base.css
+++ b/storage/products/static/products/css/base.css
@@ -61,7 +61,7 @@ a.page-link:hover {
         grid-column: 1;
         max-width: 100%;
     }
-    .container {
+    .content {
         grid-column: 1;
         max-width: 100%;
     }
