--- a/storage/templates/base.html
+++ b/storage/templates/base.html
@@ -75,7 +75,7 @@
     </div>
 
 
-    <div class="container">
+    <div class="content">
        <h1 class="title">{{ title }}</h1>
         {% block content %}
 
