--- a/storage/static/products/css/base.css
+++ b/storage/static/products/css/base.css
@@ -24,12 +24,12 @@ h1 {
 .left-bar {
     grid-column: 1/3;
 }
-.container {
+.content {
     grid-column: 3/12;
 }
 .right-bar {
     grid-column: 13/14;
-    max-width: 300px;
+    max-width: 100%;
 }
 
 a.page-link,
@@ -66,6 +66,7 @@ a.page-link:hover {
         max-width: 100%;
     }
     .right-bar {
+        padding: 1em;
         grid-column: 1;
         max-width: 100%;
     }
